[package]
name = "dirmap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
dotenvy = "0.15.7"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = {version = "0.3.19", features = ["std", "fmt", "env-filter", "time", "local-time"]}
